# Researcher

./: .coverage  .env  .env.example  AGENTS.md  README.md  pyproject.toml
.agent/workflows/: server.md
src/researcher/: __init__.py  main.py
src/researcher/agent/: researcher.py  tools.py
src/researcher/api/: models.py  routes.py
src/researcher/core/: __init__.py  config.py  errors.py  logging.py
src/researcher/data/: __init__.py  llm_client.py
src/researcher/data/tier2/: __init__.py  content_extractor.py  tavily_client.py  web_scraper.py
src/researcher/domain/: __init__.py  models.py  ports.py  services.py
tests/: conftest.py
tests/integration/: test_workflows.py
tests/unit/: test_domain.py
web/: app.js  index.html  styles.css
