[project]
name = "researcher"
version = "0.1.0"
description = "Historical research agent for writers using PydanticAI with hybrid tier architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai-slim[openai,anthropic,gemini,ollama]>=0.0.14",
    "litellm>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "tenacity>=9.0.0",
    # Tier 2 Advanced Research (optional)
    "tavily-python>=0.5.0",
    "duckduckgo-search>=7.0.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.12.0",
    "selectolax>=0.3.0",
    "markdownify>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/researcher --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
